# rs-game-of-life

./: Cargo.toml
src/: main.rs
src/gol/: models.rs
src/user_interface/: components.rs  grid.rs  mod.rs
