[package]
name = "rs-game-of-life"
version = "0.1.0"
authors = ["Martin Gonzalez Perna <mgonzalezperna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.19.0", features = [ "serde" ]}
serde = {version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
tui = {version = "0.14.0", default-features = false, features = ['crossterm', 'serde']}
